HomeAssistant/Ingress/hass-cm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Request-Id: $req_id";
      proxy_set_header Host $host;
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection $connection_upgrade;
    nginx.ingress.kubernetes.io/connection-proxy-header: keep-alive
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-connections: "25"
    nginx.ingress.kubernetes.io/limit-rps: "15"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  creationTimestamp: "2021-07-13T23:32:10Z"
  generation: 2
  labels:
    app: home-assistant
  name: home-assistant
  namespace: hass
  resourceVersion: "115873048"
  uid: 04e67538-bef1-4536-9a6b-7c3810f2d0c9
spec:
  rules:
  - host: hass.r3d3mpt10n.com
    http:
      paths:
      - backend:
          service:
            name: home-assistant-web
            port:
              number: 8123
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - hass.r3d3mpt10n.com
    secretName: hass-cm-tls
